<resources>
  <string name="app_name">Popular Movies</string>

  <!-- Label for the sort criteria preference -->
  <string name="ok">Ok</string>

  <!-- Label for the sort criteria preference -->
  <string name="pref_sort_label">Sort</string>

  <!-- Key name for storing sort criteria in SharedPreferences -->
  <string name="pref_sort_key" translatable="false">sort_type</string>

  <!-- Default sort option for sort dialog -->
  <string name="pref_sort_default" translatable="false">@string/pref_sort_popular</string>

  <!-- Label for sort option in sort dialog -->
  <string name="pref_sort_label_popular">Most Popular</string>

  <!-- Label for sort option in sort dialog -->
  <string name="pref_sort_label_rated">Highest Rated</string>

  <!-- Label for sort option in sort dialog -->
  <string name="pref_sort_label_favorite">Favorites</string>

  <!-- Key name for sort criteria preference in SharedPreferences -->
  <string name="pref_sort_popular" translatable="false">popular</string>

  <!-- Key name for sort criteria preference in SharedPreferences -->
  <string name="pref_sort_rated" translatable="false">highest_rated</string>

  <!-- Key name for sort criteria preference in SharedPreferences -->
  <string name="pref_sort_favorite" translatable="false">favorite</string>

  <string name="movie_poster_description">Poster of the Movie</string>
  <string name="movie_backdrop_description">Backdrop Image of the Movie</string>
  <string name="movie_trailer_thumbnail_description">Thumbnail of the Movie Trailer</string>
  <string name="movie_overview_label">Overview</string>
  <string name="movie_trailer_label">Trailers</string>
  <string formatted="false" name="movie_review_label">Reviews (%1$d)</string>
  <string name="movie_review_empty_message">There are no reviews yet.</string>


  <!-- Transition name for Shared Transition of movie poster between Activities -->
  <string name="movie_poster_transition_name">movie_poster</string>

  <!-- Placeholder for tools:text in contraint layouts -->
  <string name="placeholder_movie_title">Movie Title</string>
  <string name="placeholder_movie_release_date">04. February 2018</string>
  <string name="placeholder_movie_vote_average">9.2</string>
  <string name="placeholder_movie_overview">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer</string>

  <string name="placeholder_review_author">John Doe</string>
  <string name="placeholder_review_content">Nice Movie</string>

  <!-- Default error message -->
  <string name="error_title">Oops&#8230;</string>
  <string name="error_message">Something went wrong. Please try again.</string>
  <string name="error_network_message">Seems like your are not connected to the Internet. Please turn it on and try it again.</string>
  <string name="error_source_message">Seems like the source is currently not available. Please try again later.</string>


  <string name="message_no_favorites">Seems like you do not have any favorites.\nGo ahead and add some! ❤</string>
</resources>
