<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <import type="android.view.View"/>
    <import type="com.ducdungdam.popularmovies.viewmodel.BaseViewModel.State"/>
    <import type="com.ducdungdam.popularmovies.utilities.FormatUtils"/>
    <variable
      name="movie"
      type="com.ducdungdam.popularmovies.model.Movie"/>
    <variable
      name="viewModel"
      type="com.ducdungdam.popularmovies.viewmodel.DetailViewModel"/>
  </data>

  <android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="false">

    <android.support.design.widget.AppBarLayout
      android:id="@+id/app_bar_layout"
      android:layout_width="match_parent"
      android:layout_height="@dimen/detail_app_bar_height"
      android:fitsSystemWindows="true"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <android.support.design.widget.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimaryDark"
        app:expandedTitleGravity="top"
        app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
        app:titleEnabled="false">

        <ImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:contentDescription="@string/movie_backdrop_description"
          android:fitsSystemWindows="true"
          android:scaleType="centerCrop"
          app:setMovieImage="@{movie.backdropPath}"/>

        <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:fitsSystemWindows="true"
          app:layout_collapseMode="pin"/>
      </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
      android:id="@+id/fab_favorite"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/horizontal_margin"
      android:clickable="true"
      android:focusable="true"
      android:elevation="8dp"
      android:src="@{safeUnbox(viewModel.isFavorite) ? @drawable/ic_fav_selected : @drawable/ic_fav}"
      android:visibility="@{viewModel.state == State.DEFAULT ? View.VISIBLE : View.INVISIBLE}"
      app:layout_anchor="@id/app_bar_layout"
      app:layout_anchorGravity="bottom|right|end"
      app:pressedTranslationZ="12dp"
      app:rippleColor="@color/colorAccent"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/large_horizontal_margin"
      android:layout_marginEnd="@dimen/large_horizontal_margin"
      android:layout_marginLeft="@dimen/large_horizontal_margin"
      android:layout_marginRight="@dimen/large_horizontal_margin"
      android:layout_gravity="center"
      android:text="@string/error_network_message"
      android:textAlignment="center"
      android:visibility="@{viewModel.state == State.NO_NETWORK ? View.VISIBLE : View.GONE}"/>

    <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:fillViewport="true"
      android:visibility="@{viewModel.state == State.DEFAULT ? View.VISIBLE : View.INVISIBLE}"
      app:behavior_overlapTop="@dimen/detail_view_overlap_horizontal"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:id="@+id/iv_movie_poster"
          android:layout_width="@dimen/detail_movie_poster_width"
          android:layout_height="@dimen/detail_movie_poster_height"
          android:layout_marginTop="@dimen/vertical_margin"
          android:layout_marginStart="@dimen/horizontal_margin"
          android:adjustViewBounds="true"
          android:contentDescription="@string/movie_poster_description"
          android:scaleType="centerCrop"
          app:detailSetSharedTransitionMovieImage="@{movie.posterPath}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:targetApi="lollipop"/>

        <TextView
          android:id="@+id/tv_title"
          android:textStyle="bold"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:text="@{movie.title}"
          android:textSize="@dimen/text_title"
          app:layout_constraintBottom_toTopOf="@+id/tv_release_date"
          app:layout_constraintEnd_toEndOf="@+id/tv_vote_average"
          app:layout_constraintStart_toStartOf="@+id/tv_vote_average"
          tools:text="@string/placeholder_movie_title"/>

        <TextView
          android:id="@+id/tv_release_date"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:text="@{FormatUtils.formatReleaseDate(movie.releaseDate)}"
          android:textSize="@dimen/text_subtitle"
          app:layout_constraintBottom_toTopOf="@+id/tv_vote_average"
          app:layout_constraintEnd_toEndOf="@+id/tv_vote_average"
          app:layout_constraintStart_toStartOf="@+id/tv_vote_average"
          tools:text="@string/placeholder_movie_release_date"/>

        <TextView
          android:id="@+id/tv_vote_average"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:text="@{FormatUtils.formatVoteAverage(movie.voteAverage)}"
          android:textSize="@dimen/text"
          app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
          tools:text="@string/placeholder_movie_vote_average"/>
        <TextView
          android:id="@+id/tv_overview_label"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/large_vertical_margin"
          android:text="@string/movie_overview_label"
          android:textSize="@dimen/text_subtitle"
          app:layout_constraintStart_toStartOf="@+id/iv_movie_poster"
          app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"/>

        <View
          android:id="@+id/tv_overview_label_divider"
          android:layout_width="0dp"
          android:layout_height="@dimen/divider_height"
          android:layout_marginTop="@dimen/small_vertical_margin"
          android:background="@color/colorPrimaryText"
          app:layout_constraintEnd_toEndOf="@+id/tv_overview_label"
          app:layout_constraintStart_toStartOf="@+id/tv_overview_label"
          app:layout_constraintTop_toBottomOf="@+id/tv_overview_label"/>

        <TextView
          android:id="@+id/tv_overview"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/vertical_margin"
          android:lineSpacingExtra="@dimen/text_line_spacing_extra"
          android:text="@{movie.overview}"
          app:layout_constraintEnd_toEndOf="@+id/tv_title"
          app:layout_constraintStart_toStartOf="@+id/tv_overview_label"
          app:layout_constraintTop_toBottomOf="@+id/tv_overview_label_divider"
          tools:text="@string/placeholder_movie_overview"/>
        <TextView
          android:id="@+id/tv_trailer_label"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/large_vertical_margin"
          android:text="@string/movie_trailer_label"
          android:textSize="@dimen/text_subtitle"
          app:layout_constraintStart_toStartOf="@+id/iv_movie_poster"
          app:layout_constraintTop_toBottomOf="@+id/tv_overview"/>
        <View
          android:id="@+id/tv_trailer_label_divider"
          android:layout_width="0dp"
          android:layout_height="@dimen/divider_height"
          android:layout_marginTop="@dimen/small_vertical_margin"
          android:background="@color/colorPrimaryText"
          app:layout_constraintEnd_toEndOf="@+id/tv_trailer_label"
          app:layout_constraintStart_toStartOf="@+id/tv_trailer_label"
          app:layout_constraintTop_toBottomOf="@+id/tv_trailer_label"/>
        <android.support.v7.widget.RecyclerView
          android:id="@+id/rv_trailer"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/vertical_margin"
          android:paddingTop="@dimen/small_vertical_margin"
          android:paddingBottom="@dimen/small_vertical_margin"
          android:orientation="horizontal"
          app:layoutManager="android.support.v7.widget.LinearLayoutManager"
          app:layout_constraintEnd_toEndOf="@+id/tv_title"
          app:layout_constraintStart_toStartOf="@+id/tv_trailer_label"
          app:layout_constraintTop_toBottomOf="@+id/tv_trailer_label_divider"/>
        <TextView
          android:id="@+id/tv_review_label"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/large_vertical_margin"
          android:text="@string/movie_review_label"
          android:textSize="@dimen/text_subtitle"
          app:layout_constraintStart_toStartOf="@+id/iv_movie_poster"
          app:layout_constraintTop_toBottomOf="@+id/rv_trailer"/>
        <View
          android:id="@+id/tv_review_label_divider"
          android:layout_width="0dp"
          android:layout_height="@dimen/divider_height"
          android:layout_marginTop="@dimen/small_vertical_margin"
          android:background="@color/colorPrimaryText"
          app:layout_constraintEnd_toEndOf="@+id/tv_review_label"
          app:layout_constraintStart_toStartOf="@+id/tv_review_label"
          app:layout_constraintTop_toBottomOf="@+id/tv_review_label"/>

        <android.support.v7.widget.RecyclerView
          android:id="@+id/rv_review"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:paddingBottom="@dimen/vertical_margin"
          android:visibility="invisible"
          app:layoutManager="android.support.v7.widget.LinearLayoutManager"
          app:layout_constraintEnd_toEndOf="@+id/tv_title"
          app:layout_constraintStart_toStartOf="@+id/tv_review_label"
          app:layout_constraintTop_toBottomOf="@+id/tv_review_label_divider"/>
        <TextView
          android:id="@+id/tv_review_empty"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/vertical_margin"
          android:paddingBottom="@dimen/vertical_margin"
          android:text="@string/movie_review_empty_message"
          android:visibility="visible"
          app:layout_constraintEnd_toEndOf="@+id/tv_title"
          app:layout_constraintStart_toStartOf="@+id/tv_review_label"
          app:layout_constraintTop_toBottomOf="@+id/tv_review_label_divider"/>
      </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
  </android.support.design.widget.CoordinatorLayout>
</layout>